--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+/node_modules/
+/dist/
+/build/
+/.vite/
+/pnpm-debug.log
+/yarn-debug.log
+/yarn-error.log
+/npm-debug.log
+/package-lock.json
+/pnpm-lock.yaml
+/yarn.lock
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+.vscode/
+.idea/
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+/.eslintcache
+/.parcel-cache
+.next/
+*.log
